Fix layout bug

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -85,11 +85,6 @@ body {
 
 // main content area
 
-.Polaris-Frame--hasTopBar,
-.Polaris-Frame__Main {
-  padding-top: 0 !important;
-}
-
 #main {
   min-height: 75vh;
 }
